--- a/AlMohamyProject/appsettings.json
+++ b/AlMohamyProject/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-262OT74;Database=AlMohamyDb;Trusted_Connection=True;"
+    //"DefaultConnection": "Server=157.90.215.53;Database=MostafaEibtek_mad;User Id=mad;Password=2812008a1A#;"
+    //"DefaultConnection": "Server=SQL8003.site4now.net;Database=db_a92475_eibtekone;User Id=db_a92475_eibtekone_admin;Password=2812008a1A#;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
